links/dapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dapi
  name: dapi
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
    - name: 8888-tcp
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: dapi
status:
  loadBalancer: {}
