links/sapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sapi
  name: sapi
spec:
  ports:
    - name: "7777"
      port: 7777
      targetPort: 7777
    - name: 7777-tcp
      port: 7777
      targetPort: 7777
  selector:
    io.kompose.service: sapi
status:
  loadBalancer: {}
