links/sapi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travelers-demo
  labels:
    kuma.io/sidecar-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-sapi
  namespace: travelers-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-sapi
  template:
    metadata:
      labels:
        app: demo-sapi
    spec:
      containers:
        - env:
            - name: applicationName
              value: demo-sapi
            - name: lastStop
              value: "true"
            - name: nextUri
              value: http://localhost:7777/hello
            - name: server.port
              value: "7777"
          image: "perfordummies/verification-api:latest"
          name: epam-sapi
          ports:
            - containerPort: 7777
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: demo-sapi
  namespace: travelers-demo
spec:
  selector:
    app: demo-sapi
  ports:
  - protocol: TCP
    appProtocol: http
    port: 7777
