links/xapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: xapi
  name: xapi
spec:
  ports:
    - name: "9999"
      port: 9999
      targetPort: 9999
    - name: 9999-tcp
      port: 9999
      targetPort: 9999
  selector:
    io.kompose.service: xapi
status:
  loadBalancer: {}
